--- a/certification project 4/styles.css
+++ b/certification project 4/styles.css
@@ -4,7 +4,7 @@
     font-size: 20px;
     box-sizing: border-box;
   
-  }
+  } 
   
   header{
     position: fixed;
@@ -15,7 +15,7 @@
     justify-content: space-around;
     align-items: center;
     background: linear-gradient(90deg,white,#92a8d1);
-  }
+  } 
   #header-img{
     height: 30%;
     width: 40vw;
@@ -139,7 +139,7 @@
   @media (max-width: 500px){
     #header{
       flex-direction: column;
-      padding: 20px 25vw;
+      margin-top: 10px;
     }
     
   }
@@ -149,9 +149,10 @@
       width: 100%;
       display: flex;
       flex-direction: column;
+      flex-wrap: nowrap;
       align-items: center;
       text-align: center;
-      padding: 0 50px;
+      padding: 0 150px;
     }
     .header-img{
       width: 100%;
@@ -159,6 +160,9 @@
     }
     #form{
       margin-top: 100px;
+    }
+    #nav-bar ul{
+      flex-direction: column;
     }
   }
   
